--- a/NewScheduler/res/layout/detail_schedule.xml
+++ b/NewScheduler/res/layout/detail_schedule.xml
@@ -210,7 +210,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginDown="20dp"
+            android:layout_marginBottom="20dp"
             android:text="TextView" />
 
     </RelativeLayout>
