--- a/NewScheduler/res/layout/detail_schedule.xml
+++ b/NewScheduler/res/layout/detail_schedule.xml
@@ -90,14 +90,13 @@
             android:gravity="center" />
 
         <TextView
-            android:id="@+id/detail_text_status"
+            android:id="@+id/todo_status_schedule"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="52dp"
+            android:layout_marginLeft="66dp"
             android:layout_toRightOf="@+id/todo_icon_state"
             android:gravity="center"
-            android:text="TextView"
             android:textSize="20dp" />
 
     </RelativeLayout>
